# rectdetect

./: CMakeLists.txt  LICENSE  README.md  cltoheader.c  egbuf.h  helper.c  helper.h  oclhelper.c  oclhelper.h  oclimgutil.c  oclimgutil.cl  oclimgutil.h  oclpolyline.c  oclpolyline.cl  oclpolyline.h  oclrect.c  oclrect.cl  oclrect.h  poly.cpp  rect.cpp  vec234.h  videotest.cpp  vidpoly.cpp  vidrect.cpp
